--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="https://sites.google.com/smkn1padaherang.sch.id/selvi/beranda?authuser=1">
+                      <a href="https://sites.google.com/view/portofolio-selvi1/halaman-muka">
                         selengkapnya
                       </a>
                     </h5>
