--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="https://anggara2877.github.io/Portofolio_Anggara/">
+                      <a href="https://anggara2877.github.io/potofoliodigital_Anggara/">
                         selengkapnya
                       </a>
                     </h5>
