--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           </div>
         </div>
       </div>
-      <h4>Study hard, but do not forget to istira hard</h4>
+      <h4><bold>Study hard, but do not forget to istira hard</bold></h4>
       <div class="detail-box">
         <h2>
           Wali Kelas
