--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <p>
                      SMK NEGERI 1 PADAHERANG
                     </p>
-                    
+                    <p> <h6><bold>Study hard, but do not forget to istira hard</bold></h6></p>
                     </div>
                   </div>
                 </div>
@@ -120,7 +120,7 @@
               </div>
             </div>
           </div>
-          <h6><bold>Study hard, but do not forget to istira hard</bold></h6>
+         
 
     </section>
     <!-- end slider section -->
