--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
           </div>
           <div class="detail-box">
             <h5>
-              menginstal windows
+             <a href="https://itkoding.com/cara-install-windows-10/">
+          Menginstal windows
             </h5>
           </div>
         </div>
