--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
           </div>
           <div class="detail-box">
             <h5>
-              membuat topologi jaringan
+               <a href="https://medium.com/@farazi31981/tutorial-membuat-topologi-jaringan-menggunakan-cisco-packet-tracer-6b80c68ce2dc">
+                 Membuat Topologi Jaringan
             </h5>
           </div>
         </div>
