--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
           </div>
           <div class="detail-box">
             <h5>
+               <a href="https://id.wikihow.com/Merakit-Komputer-Sendiri">
               merakit komputer
             </h5>
           </div>
@@ -213,6 +214,7 @@
           </div>
           <div class="detail-box">
             <h5>
+               <a href="https://tambahpinter.com/cara-mendesain-sistem-keamanan-jaringan/">
               membuat keamanan jaringan
             </h5>
           </div>
@@ -223,6 +225,7 @@
           </div>
           <div class="detail-box">
             <h5>
+               <a href="https://id.wikipedia.org/wiki/Linux">
               linux
             </h5>
           </div>
@@ -233,6 +236,7 @@
           </div>
           <div class="detail-box">
             <h5>
+               <a href="https://teknikelektronika.com/pengertian-fiber-optik-optical-fiber-jenis-jenis-fiber-optik/">
               fiber optic
             </h5>
           </div>
