--- a/category.html
+++ b/category.html
@@ -88,7 +88,7 @@
 
   <!-- category section -->
 
-  <section class="category_section layout_padding">
+   <section class="category_section layout_padding">
     <div class="container">
       <div class="heading_container">
         <h2>
@@ -102,7 +102,8 @@
           </div>
           <div class="detail-box">
             <h5>
-              menginstal windows
+             <a href="https://itkoding.com/cara-install-windows-10/">
+          Menginstal windows
             </h5>
           </div>
         </div>
@@ -112,7 +113,8 @@
           </div>
           <div class="detail-box">
             <h5>
-              membuat topologi jaringan
+               <a href="https://medium.com/@farazi31981/tutorial-membuat-topologi-jaringan-menggunakan-cisco-packet-tracer-6b80c68ce2dc">
+                 Membuat Topologi Jaringan
             </h5>
           </div>
         </div>
@@ -122,6 +124,7 @@
           </div>
           <div class="detail-box">
             <h5>
+               <a href="https://id.wikihow.com/Merakit-Komputer-Sendiri">
               merakit komputer
             </h5>
           </div>
@@ -132,6 +135,7 @@
           </div>
           <div class="detail-box">
             <h5>
+               <a href="https://tambahpinter.com/cara-mendesain-sistem-keamanan-jaringan/">
               membuat keamanan jaringan
             </h5>
           </div>
@@ -142,6 +146,7 @@
           </div>
           <div class="detail-box">
             <h5>
+               <a href="https://id.wikipedia.org/wiki/Linux">
               linux
             </h5>
           </div>
@@ -152,10 +157,47 @@
           </div>
           <div class="detail-box">
             <h5>
+               <a href="https://teknikelektronika.com/pengertian-fiber-optik-optical-fiber-jenis-jenis-fiber-optik/">
               fiber optic
             </h5>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- end category section -->
+
+  <!-- about section -->
+
+  <section class="about_section layout_padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 col-lg-9 mx-auto">
+          <div class="img-box">
+            <img src="images/tjktisra.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    
+      <div class="detail-box">
+        <h2>
+          Wali Kelas
+        </h2>
+        <p>
+        Hani Nurhasanah S.pd
+        </p>
+        <a href="https://www.instagram.com/hani.nurhasanah_?igsh=cGJkbjF5bDllMG1o">
+          instagram
+        </a>
+      </div>
+    </div>
+      <div class="detail-box">
+       
+        <a href="https://xitjktc.github.io/galeri_tjktc/">
+          Galeri TJKT C
+        </a>
       </div>
     </div>
   </section>
