--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <div class="detail-box">
             <h5>
              <a href="https://itkoding.com/cara-install-windows-10/">
-          Menginstal windows
+          Menginstal windows</a>
             </h5>
           </div>
         </div>
@@ -193,7 +193,7 @@
           <div class="detail-box">
             <h5>
                <a href="https://medium.com/@farazi31981/tutorial-membuat-topologi-jaringan-menggunakan-cisco-packet-tracer-6b80c68ce2dc">
-                 Membuat Topologi Jaringan
+                 Membuat Topologi Jaringan</a>
             </h5>
           </div>
         </div>
@@ -204,7 +204,7 @@
           <div class="detail-box">
             <h5>
                <a href="https://id.wikihow.com/Merakit-Komputer-Sendiri">
-              merakit komputer
+              merakit komputer</a>
             </h5>
           </div>
         </div>
@@ -215,7 +215,7 @@
           <div class="detail-box">
             <h5>
                <a href="https://tambahpinter.com/cara-mendesain-sistem-keamanan-jaringan/">
-              membuat keamanan jaringan
+              membuat keamanan jaringan</a>
             </h5>
           </div>
         </div>
@@ -226,7 +226,7 @@
           <div class="detail-box">
             <h5>
                <a href="https://id.wikipedia.org/wiki/Linux">
-              linux
+              linux</a>
             </h5>
           </div>
         </div>
@@ -237,7 +237,7 @@
           <div class="detail-box">
             <h5>
                <a href="https://teknikelektronika.com/pengertian-fiber-optik-optical-fiber-jenis-jenis-fiber-optik/">
-              fiber optic
+              fiber optic</a>
             </h5>
           </div>
         </div>
