--- a/work.html
+++ b/work.html
@@ -380,7 +380,7 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="https://sites.google.com/view/portofolioirginurdiansyah/halaman-muka">
+                      <a href="https://sites.google.com/smkn1padaherang.sch.id/portofolioirginurdiansyah/halaman-muka">
                         selengkapnya
                       </a>
                     </h5>
