--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>portofolio XI TJKT C</title>
+  <title>portofolio XII TJKT C</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -31,9 +31,9 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logoc.png" alt="" />
+            <img src="images/logo.jpg" alt="" />
             <span>
-              XI TJKT C
+              XII TJKT C
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -191,7 +191,8 @@
             <img src="images/tplg.png" alt="">
           </div>
           <div class="detail-box">
-            <h5>
+            <h5>
+
                  Membuat Topologi Jaringan
             </h5>
           </div>
@@ -221,7 +222,8 @@
             <img src="images/ln.png" alt="">
           </div>
           <div class="detail-box">
-            <h5>
+            <h5>
+
               linux
             </h5>
           </div>
@@ -231,7 +233,8 @@
             <img src="images/fo.png" alt="">
           </div>
           <div class="detail-box">
-            <h5>
+            <h5>
+
               fiber optic
             </h5>
           </div>
