--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.jpg" alt="" />
+            <img src="images/tkjc.png" alt="" />
             <span>
               XII TJKT C
             </span>
