--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                       selamat datang di <br>
                      
                     </h1>
-                    <h1>XI TJKT C </h1>
+                    <h1>XII TJKT C </h1>
                     <p>
                      SMK NEGERI 1 PADAHERANG
                     </p>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="offset-md-1 col-md-4 img-container">
                   <div class="img-box">
-                    <img src="images/BGC.png" alt="">
+                    <img src="images/tkjc.png" alt="">
                   </div>
                 </div>
               </div>
@@ -856,9 +856,9 @@
       <div class="container">
         <div class="info_top">
           <div class="info_logo">
-            <img src="images/logoc.png" alt="" />
+            <img src="images/tkjc.png" alt="" />
             <span>
-              XI TJKT C
+              XII TJKT C
             </span>
           </div>
           <div class="social_box">
@@ -899,11 +899,11 @@
             </div>
             <div class="col-md-3 ">
               <h5>
-                XI TJKT C
+                XII TJKT C
               </h5>
               <p>
-               Tetap kompak selalu!!!
-              </p>
+              TJKT JOSSS✊
+              </P>
             </div>
 
             <div class="col-md-3 col-lg-2 offset-lg-1">
@@ -949,7 +949,7 @@
                     </div>
                     <div class="detail-box">
                       <h6>
-                        tjktcxi@gmail.com
+                        tjktcxii@gmail.com
                       </h6>
                     </div>
                   </a>
