--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
                   </a>
                 </div>
                 <div class="col-md-4">
-                  <a href="#" class="link-box">
+                  <a href="mailto:xitjktc@gmail.com" class="link-box">
                     <div class="img-box">
                       <img src="images/mail.png" alt="">
                     </div>
