--- a/work.html
+++ b/work.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>XI TJKT C</title>
+  <title>XII TJKT C</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -32,9 +32,9 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logoc.png" alt="" />
+            <img src="images/logo.jpg" alt="" />
             <span>
-              XI TJKT C
+              XII TJKT C
             </span>
           </a>
           </a>
@@ -661,9 +661,9 @@
       <div class="container">
         <div class="info_top">
           <div class="info_logo">
-            <img src="images/logoc.png" alt="" />
+            <img src="images/logo.jpg" alt="" />
             <span>
-              XI TJKT C
+              XII TJKT C
             </span>
           </div>
           <div class="social_box">
@@ -704,10 +704,10 @@
             </div>
             <div class="col-md-3 ">
               <h5>
-                XI TJKT C
+                XII TJKT C
               </h5>
               <p>
-               Tetap kompak selalu!!!
+               TJKT JOSSS✊
               </p>
             </div>
 
@@ -748,13 +748,13 @@
                   </a>
                 </div>
                 <div class="col-md-4">
-                  <a href="#" class="link-box">
+                  <a href="mailto:xitjktc@gmail.com" class="link-box">
                     <div class="img-box">
                       <img src="images/mail.png" alt="">
                     </div>
                     <div class="detail-box">
                       <h6>
-                        tjktcxi@gmail.com
+                        tjktcxii@gmail.com
                       </h6>
                     </div>
                   </a>
